refactor :: refactor collectors to toList()